[project]
name = "nereusdoorloongmagicpanel-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "ndlmpanel-agent",
    "pydantic[email]>=2.13.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.uv.sources]
ndlmpanel-agent = { git = "https://github.com/Raix2215/NDLMPanel-Agent.git" }
